# func2024genetic

./: .gitignore  README.md  genetic.cabal
src/: Main.hs  Random.hs  TestFunctions.hs  Utils.hs
